--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>게시글 상세 페이지</title>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 </head>
 <body>
 <h1 th:text="${board.title}">제목입니다</h1>
@@ -10,5 +11,75 @@
 <a th:href="@{${board.filepath}}">다운받기</a>
 <a th:href="@{/board/delete(boardId=${board.id})}">글 삭제</a>
 <a th:href="@{/board/modify/{boardId}(boardId=${board.id})}">글 수정</a>
+<p></p>
+<div>
+    <input type="text" id="commentWriter" placeholder="작성자">
+    <input type="text" id="commentContents" placeholder="내용">
+    <button id="comment-write-btn" onclick="commentWrite()">댓글작성</button>
+</div>
+<p></p>
+<div id="comment-list">
+    <table>
+        <thead>
+        <tr>
+            <th>댓글번호</th>
+            <th>작성자</th>
+            <th>내용</th>
+            <th>작성시간</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr th:each="comment : ${commentList}">
+                <td th:text="${comment.id}"></td>
+                <td th:text="${comment.commentWriter}"></td>
+                <td th:text="${comment.commentContents}"></td>
+                <td th:text="${comment.commentCreatedTime}"></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 </body>
+<script th:inline="javascript">
+    const commentWrite = () => {
+        const writer = document.getElementById('commentWriter').value;
+        const contents = document.getElementById('commentContents').value;
+        const post = '[[${board.id}]]';
+
+        $.ajax({
+            type: "POST",
+            url: "/comment/save",
+            contentType: "application/json",
+            data: JSON.stringify({
+                commentWriter: writer,
+                commentContents: contents,
+                postId: post
+            }),
+            dataType: "json",
+            success: function (commentList) {
+                console.log("작성 성공");
+                console.log(commentList);
+                let output = "<table>";
+                output += "<tr><th>댓글번호</th>";
+                output += "<th>작성자</th>";
+                output += "<th>내용</th>";
+                output += "<th>작성시간</th></tr>";
+                for(let i in commentList){
+                    output += "<tr>";
+                    output += "<td>"+commentList[i].id+"</td>";
+                    output += "<td>"+commentList[i].commentWriter+"</td>";
+                    output += "<td>"+commentList[i].commentContents+"</td>";
+                    output += "<td>"+commentList[i].commentCreatedTime+"</td>";
+                    output += "</tr>";
+                }
+                output += "</table>";
+                document.getElementById('comment-list').innerHTML = output;
+                document.getElementById('commentWriter').value='';
+                document.getElementById('commentContents').value='';
+            },
+            error: function () {
+                console.log("작성 실패");
+            }
+        });
+    };
+</script>
 </html>
