--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1 th:text="${board.title}">제목입니다</h1>
+<p th:text="${board.viewCount}">조회수</p>
 <p th:text="${board.content}">내용이 들어갈 부분입니다</p>
 <a th:href="@{${board.filepath}}">다운받기</a>
 <a th:href="@{/board/delete(boardId=${board.id})}">글 삭제</a>
