게시글 좋아요 기능

--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -34,6 +34,7 @@
           <a th:text="${board.title}" th:href="@{/board/view(boardId=${board.id})}"></a>
           </td>
           <td th:text="${board.viewCount}"></td>
+          <td th:text="${board.heartCount}"></td>
       </tr>
       </tbody>
     </table>
