--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -13,6 +13,7 @@
 </p>
 
 <p th:text="|조회수 : ${board.viewCount}|">조회수</p>
+<p th:text="|작성 날짜: ${#dates.format(board.boardCreatedTime, 'yyyy-MM-dd')}|"></p>
 <p th:text="${board.content}">내용이 들어갈 부분입니다</p>
 <a th:href="@{${board.filepath}}">다운받기</a>
 <a th:href="@{/board/delete(boardId=${board.id})}">글 삭제</a>
