댓글 작성 시간 수정

--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -44,7 +44,7 @@
                 <td th:text="${comment.id}"></td>
                 <td th:text="${comment.commentWriter}"></td>
                 <td th:text="${comment.commentContents}"></td>
-                <td th:text="${#dates.format(comment.commentCreatedTime, 'yyyy-MM-dd HH:mm')}"></td>
+                <<td th:text="${#dates.format(comment.commentCreatedTime, 'yyyy-MM-dd HH:mm')}"></td>
             </tr>
         </tbody>
     </table>
