--- a/src/main/resources/templates/boardwrite.html
+++ b/src/main/resources/templates/boardwrite.html
@@ -27,7 +27,7 @@
 </style>
 <body>
 <div class="layout">
-    <form action="/board/writepro" method="post" enctype="multipart/form-data">
+    <form action="/free-board/writepro" method="post" enctype="multipart/form-data">
         <input name="title" type="text" placeholder="제목을 입력하세요">
 
         <!-- 카테고리 선택 추가 -->
