--- a/src/main/resources/templates/Boardmodify.html
+++ b/src/main/resources/templates/Boardmodify.html
@@ -28,7 +28,7 @@
 </style>
 <body>
 <div class="layout">
-    <form th:action="@{/board/update/{boardId}(boardId=${board.id})}" method="post" enctype="multipart/form-data">
+    <form th:action="@{/free-board/update/{boardId}(boardId=${board.id})}" method="post" enctype="multipart/form-data">
         <input type="text" name="title" th:value="${board.title}" placeholder="제목">
         <textarea name="content" placeholder="내용" th:text="${board.content}"></textarea>
 
