--- a/src/main/resources/templates/boardmain.html
+++ b/src/main/resources/templates/boardmain.html
@@ -10,7 +10,7 @@
 </body>
 <script>
     const freeboard = () => {
-        location.href = "board/list";
+        location.href = "free-board/list";
     }
 
     const secretboard = () => {
