--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -40,12 +40,15 @@
         </tr>
         </thead>
         <tbody>
-            <tr th:each="comment : ${commentList}">
-                <td th:text="${comment.id}"></td>
-                <td th:text="${comment.commentWriter}"></td>
-                <td th:text="${comment.commentContents}"></td>
-                <td th:text="${#dates.format(comment.commentCreatedTime, 'yyyy-MM-dd HH:mm')}"></td>
-            </tr>
+        <tr th:each="comment : ${commentList}">
+            <td th:text="${comment.id}"></td>
+            <td th:text="${comment.memberId}"></td>
+            <td th:text="${comment.commentContents}"></td>
+            <td th:text="${#dates.format(comment.commentCreatedTime, 'yyyy-MM-dd HH:mm')}"></td>
+            <td>
+                <button th:attr="onclick='deleteComment(' + ${comment.id} + ',\'' + ${comment.memberId} + '\')'">삭제</button>
+            </td>
+        </tr>
         </tbody>
     </table>
 </div>
@@ -61,7 +64,7 @@
             url: "/free-comment/save",
             contentType: "application/json",
             data: JSON.stringify({
-                commentWriter: memberId, // 작성자를 임의의 회원번호로 설정
+                memberId: memberId, // 작성자를 임의의 회원번호로 설정
                 commentContents: contents,
                 boardId: boardId
             }),
@@ -77,7 +80,7 @@
                 for(let i in commentList){
                     output += "<tr>";
                     output += "<td>"+commentList[i].id+"</td>";
-                    output += "<td>"+commentList[i].commentWriter+"</td>";
+                    output += "<td>"+commentList[i].memberId+"</td>";
                     output += "<td>"+commentList[i].commentContents+"</td>";
                     output += "<td>"+commentList[i].commentCreatedTime+"</td>";
                     output += "</tr>";
@@ -91,6 +94,28 @@
             }
         });
     };
+</script>
+
+<script th:inline="javascript">
+    function deleteComment(commentId, memberId) {
+        const currentUser = "1"; // 임시 사용자 ID
+        if (memberId !== currentUser) {
+            alert("본인이 작성한 댓글만 삭제할 수 있습니다.");
+            return;
+        }
+
+        $.ajax({
+            type: "DELETE",
+            url: `/free-comment/delete/${commentId}/${memberId}`,
+            success: function () {
+                alert("댓글이 삭제되었습니다.");
+                location.reload();
+            },
+            error: function (xhr) {
+                alert(xhr.responseText || "삭제 실패");
+            }
+        });
+    }
 </script>
 
 <script th:inline="javascript">
