--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -34,6 +34,7 @@
         <tr>
             <th>글 번호</th>
             <th>제목</th>
+            <th>작성자</th>
             <th>조회수</th>
             <th>하트</th>
         </tr>
@@ -44,6 +45,7 @@
             <td>
                 <a th:text="${board.title}" th:href="@{/free-board/view(boardId=${board.id})}"></a>
             </td>
+            <td th:text="${board.memberId}"></td>
             <td th:text="${board.viewCount}"></td>
             <td th:text="${board.heartCount}"></td>
         </tr>
