--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -13,6 +13,7 @@
 </p>
 
 <p th:text="|조회수 : ${board.viewCount}|">조회수</p>
+<p th:text="|작성자: ${board.memberId}|">작성자</p>
 <p th:text="|작성 날짜: ${#dates.format(board.boardCreatedTime, 'yyyy-MM-dd')}|"></p>
 <p th:text="${board.content}">내용이 들어갈 부분입니다</p>
 
@@ -21,8 +22,12 @@
     <img th:src="${board.filepath}" alt="게시글 이미지" style="max-width: 100%; height: auto;">
 </div>
 
-<a th:href="@{/free-board/delete(boardId=${board.id})}">글 삭제</a>
-<a th:href="@{/free-board/modify/{boardId}(boardId=${board.id})}">글 수정</a>
+<!-- 게시글 상세보기 페이지 -->
+<th:block th:if="${board.memberId == 'testUser'}"> <!-- 'testUser'는 현재 임시 로그인 사용자 -->
+    <a th:href="@{/free-board/delete(boardId=${board.id}, memberId=${board.memberId})}">삭제</a>
+    <a th:href="@{/free-board/modify/{boardId}(boardId=${board.id})}">글 수정</a>
+</th:block>
+
 <p></p>
 <div>
     <input type="text" id="commentContents" placeholder="내용">
