비밀게시판 게시글 수정, 삭제 수정

--- a/src/main/resources/templates/secretboardmodify.html
+++ b/src/main/resources/templates/secretboardmodify.html
@@ -28,7 +28,7 @@
 </style>
 <body>
 <div class="layout">
-    <form th:action="@{/secret-board/update/{boardId}(boardId=${secretboard.id})}" method="post" enctype="multipart/form-data">
+    <form th:action="@{/secret-board/update/{boardId}/{memberId}(boardId=${secretboard.id}, memberId=${secretboard.memberId})}" method="post" enctype="multipart/form-data">
         <input type="text" name="title" th:value="${secretboard.title}" placeholder="제목">
         <textarea name="content" placeholder="내용" th:text="${secretboard.content}"></textarea>
 
