--- a/src/main/resources/templates/secretboardview.html
+++ b/src/main/resources/templates/secretboardview.html
@@ -13,6 +13,7 @@
 </p>
 
 <p th:text="|조회수 : ${secretboard.viewCount}|">조회수</p>
+<p th:text="|작성자: ${secretboard.memberId}|">작성자</p>
 <p th:text="|작성 날짜: ${#dates.format(secretboard.boardCreatedTime, 'yyyy-MM-dd')}|"></p>
 <p th:text="${secretboard.content}">내용이 들어갈 부분입니다</p>
 
@@ -21,8 +22,11 @@
     <img th:src="${secretboard.filepath}" alt="게시글 이미지" style="max-width: 100%; height: auto;">
 </div>
 
-<a th:href="@{/secret-board/delete(boardId=${secretboard.id})}">글 삭제</a>
-<a th:href="@{/secret-board/modify/{boardId}(boardId=${secretboard.id})}">글 수정</a>
+<th:block th:if="${secretboard.memberId == 'testUser'}">
+    <a th:href="@{/secret-board/delete/{boardId}/{memberId}(boardId=${secretboard.id}, memberId=${secretboard.memberId})}">삭제</a>
+    <a th:href="@{/secret-board/modify/{boardId}/{memberId}(boardId=${secretboard.id}, memberId=${secretboard.memberId})}">수정</a>
+</th:block>
+
 <p></p>
 <div>
     <input type="text" id="secretcommentContents" placeholder="내용">
