--- a/src/main/resources/templates/secretboardlist.html
+++ b/src/main/resources/templates/secretboardlist.html
@@ -32,6 +32,7 @@
           <tr>
             <th>글 번호</th>
             <th>제목</th>
+            <th>이미지</th>
             <th>작성자</th>
             <th>조회수</th>
             <th>하트</th>
@@ -42,6 +43,11 @@
           <td th:text="${secretboard.id}"></td>
           <td>
           <a th:text="${secretboard.title}" th:href="@{/secret-board/view(boardId=${secretboard.id})}"></a>
+          </td>
+          <td>
+              <img th:src="${secretboard.filename} ? ${secretboard.filepath} : '/images/default.png'"
+                   alt="게시글 이미지"
+                   style="max-width: 100px; height: auto;">
           </td>
           <td th:text="${secretboard.memberId}"></td>
           <td th:text="${secretboard.viewCount}"></td>
